fixed layout overlap

--- a/src/App.css
+++ b/src/App.css
@@ -690,6 +690,7 @@ display: flex;
     width: 95%;
     max-width: 420px;
     height: 60vh;
+    padding: 0 0 0 0;
 }
 
 /* אזור הרשימה הנגלל */
@@ -896,7 +897,7 @@ display: flex;
   justify-content: center;
   align-items: flex-end; /* ממרכז את המודאל לאמצע המסך */
   z-index: 1000;
-  padding: 20px; }
+}
 .modal-content {
 background: white;
   width: 100%;
